# gstaldergeist

./: .dockerignore  .env  .env-example  AUDIT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflow/: deploy.yml
.github/workflows/: deploy-prod.yml  deploy.yml  hello-world.yml  merge-req.yml
ansible/: ansible.cfg  inventory.ini  playbook.yml
ansible/group_vars/: production.yml  testing.yml
ansible/roles/deploy-gstaldergeist/tasks/: main.yml
ansible/roles/deploy-gstaldergeist/templates/: podman-app.service.j2  template_vars.yml.j2
src/: answer_handler.rs  data_grabber.rs  database.rs  email.rs  error.rs  main.rs  telegram_writer.rs
src/data_grabber/: adliswil.rs  we_recycle.rs
