[package]
name = "gstaldergeist"
version = "3.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
lettre = "0.11.15"
pdf-extract = "0.8.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
teloxide = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rusqlite = { version = "0.36.0", features = ["chrono", "bundled"] }
openssl = { version = "0.10.73", features = ["vendored"] }
