[package]
name = "gstaldergeist"
version = "3.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
lettre = "0.11.18"
pdf-extract = "0.9.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
teloxide = "0.17.0"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rusqlite = { version = "0.37.0", features = ["chrono", "bundled"] }
openssl = { version = "0.10.73", features = ["vendored"] }
